--- a/app/elements/company/challenge-template/challenge-template-list.html
+++ b/app/elements/company/challenge-template/challenge-template-list.html
@@ -27,7 +27,7 @@
 					notify: true,
 				}
 			},
-			getChallenges: function () {
+			ready: function(){
 				this.$.challengeTemplateService.getAll();
 			}
 		});
