--- a/app/elements/app-nav.html
+++ b/app/elements/app-nav.html
@@ -20,7 +20,7 @@
 							<paper-tab link><a href="/tasks" class="center-center horizontal layout fullHeight">Tasks</a></paper-tab>
 						</template>
 						<template is="dom-if" if="{{isCoder}}">
-							<paper-tab link><a href="/challenge" class="center-center horizontal layout fullHeight">Challenge</a></paper-tab>
+							<paper-tab link><a href="/mychallenges" class="center-center horizontal layout fullHeight">My challenges</a></paper-tab>
 						</template>
 						<span class="flex-5"></span>
 					</paper-tabs>
