--- a/app/elements/company/challenge-template/challenge-template-card.html
+++ b/app/elements/company/challenge-template/challenge-template-card.html
@@ -80,7 +80,7 @@
 				return util.computeDuration(challengeTemplate.duration);
 			},
 			_viewChallengeTemplateDetail: function () {
-				page.redirect('/challenges/template/' + this.challengeTemplate.id);
+				page('/challenges/template/' + this.challengeTemplate.id);
 			}
 		});
 	</script>
