--- a/app/elements/common/description-list/description-list-item.html
+++ b/app/elements/common/description-list/description-list-item.html
@@ -1,6 +1,6 @@
 <dom-module id="description-list-item">
 	<template>
-		<style is="custom-style" include="shared-styles">
+		<style is="custom-style">
 			.list-item {
 				margin: 5px 0;
 				width: 100%;
