add unit tests for task detail

--- a/app/elements/company/task/task-detail.html
+++ b/app/elements/company/task/task-detail.html
@@ -49,6 +49,7 @@
 		</div>
 		<task-service id="taskService" task="{{task}}"></task-service>
 	</template>
+	<script src="/scripts/util.js"></script>
 	<script>
 		Polymer({
 			is: 'task-detail',
