--- a/app/elements/coder/input-view/input-view-element.html
+++ b/app/elements/coder/input-view/input-view-element.html
@@ -10,7 +10,7 @@
 		<input type="file" name="inputToTest" id="inputToTest" on-change="setInput" style="display: none;">
 		<div class="horizontal layout">
 			<p>Test <span>{{counter}}</counter></p>
-			<input id="input" type="text" class="flex self-center" style$="{{inputStyle}}"></input>
+			<textarea id="input" type="text" class="flex self-center" style$="{{inputStyle}}"></textarea>
 			<paper-icon-button id="uploadButton" class="self-center" icon="file-upload" on-click="addInputFile"></paper-icon-button>
 			<paper-icon-button id="runButton" class="self-center" icon="av:play-arrow" on-click="runTest"></paper-icon-button>
 		</div>
