add leaderboard to challenge detail

--- a/app/elements/company/challenge/challenge-detail.html
+++ b/app/elements/company/challenge/challenge-detail.html
@@ -5,6 +5,7 @@
 <link rel="import" href="/elements/common/services/challenge-service.html">
 <link rel="import" href="/elements/common/description-list/description-list.html">
 <link rel="import" href="/elements/common/description-list/description-list-item.html">
+<link rel="import" href="/elements/common/leaderboard/challenge-leaderboard.html">
 <link rel="import" href="/elements/company/candidate/invite/invite-candidates.html">
 
 <dom-module id="challenge-detail">
@@ -47,7 +48,7 @@
 					</template>
 				</paper-material>
 			<paper-material class="card">
-				<h3>Results</h3>
+				<challenge-leaderboard leaderboard="{{challenge.leaderboard}}"></challenge-leaderboard>
 			</paper-material>
 		</div>
 	</template>
