--- a/app/elements/common/leaderboard/challenge-leaderboard.html
+++ b/app/elements/common/leaderboard/challenge-leaderboard.html
@@ -15,8 +15,12 @@
 			hr {
 				margin: 0;
 			}
+			.leaderboard {
+				@apply(--layout-vertical);
+				padding: 5px;
+			}
 		</style>
-		<div class="layout vertical">
+		<div class="leaderboard">
 			<div class="header row">
 				<div>User</div>
 				<div>Finished tasks</div>
