--- a/app/elements/company/challenge/challenge-detail.html
+++ b/app/elements/company/challenge/challenge-detail.html
@@ -4,6 +4,7 @@
 
 <link rel="import" href="/elements/common/services/challenge-service.html">
 <link rel="import" href="/elements/common/services/result-service.html">
+<link rel="import" href="/elements/common/services/invitation-service.html">
 <link rel="import" href="/elements/common/description-list/description-list.html">
 <link rel="import" href="/elements/common/description-list/description-list-item.html">
 <link rel="import" href="/elements/common/leaderboard/challenge-leaderboard.html">
@@ -21,10 +22,18 @@
 		paper-material {
 			margin: 16px;
 		}
+		table, th, td {
+			border: 1px solid black;
+			border-collapse: collapse;
+		}
+		th, td {
+			padding: 5px;
+		}
 	</style>
 	<template>
 		<challenge-service id="challengeService" challenge="{{challenge}}"></challenge-service>
 		<result-service id="resultService" leaderboard="{{leaderboard}}"></result-service>
+		<invitation-service id="invitationService" invitations="{{invitations}}"></invitation-service>
 		<invite-candidates id="inviteCandidates"></invite-candidates>
 
 		<div class="grid vertical layout mainContent">
@@ -45,9 +54,24 @@
 
 				<paper-material class="card">
 					<h3>Invited users</h3>
-					<template is="dom-repeat" items="{{challenge.invitedUsers}}">
-						<div>{{item.username}}</div>
-					</template>
+					<table style="width:100%">
+						<tr>
+							<th>Username</th>
+							<th>Email</th>
+							<th>Token</th>
+							<th>Started</th>
+							<th>Expire</th>
+						</tr>
+						<template is="dom-repeat" items="{{invitations}}">
+							<tr>
+								<td>{{item.username}}</td>
+								<td>{{item.email}}</td>
+								<td>{{item.token}}</td>
+								<td>{{_formatDate(item.started)}}</td>
+								<td>{{_formatDate(item.expire)}}</td>
+							</tr>
+						</template>
+					</table>
 				</paper-material>
 			<paper-material class="card">
 				<challenge-leaderboard leaderboard="{{leaderboard}}"></challenge-leaderboard>
@@ -69,11 +93,15 @@
 				challengeId: {
 					reflectToAttribute: true,
 					observer: '_challengeIdChanged'
+				},
+				invitations: {
+					type: Array
 				}
 			},
 			_challengeIdChanged: function(){
 				this.$.challengeService.getById(this.challengeId);
 				this.$.resultService.getLeaderboard(this.challengeId);
+				this.$.invitationService.getByChallengeId(this.challengeId);
 			},
 			_formatDate: function(date){
 				if (!!date){
